# textured-mesh-gen

./: README.md
src/: bcs_common.py  camera_calibration.py  crop_extraction_common.py  distributions.py  edward1_utils.py  extract_3dr2n2_crops.py  extract_bcs_crops.py  extract_cub_crops.py  extract_hsp_crops.py  hyperparams.py  integrated_klqp.py  mesh_utils.py  random_variables.py  train.py
src/mesh_intersections/: CMakeLists.txt  mesh_intersections.cpp  mesh_intersections.h  mesh_pushing.py  push_offsets_op.cpp  test_app.cpp  test_tf_mesh_pushing.py  visualisation.cpp  visualise_mesh_op.cpp
src/mesh_intersections/cmake/: FindLIBIGL.cmake
